<?xml version="1.0"?>
<package>
  <name>generic_robot_package</name>
  <version>0.0.0</version>
  <description>A generic robot package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
</package>